Removed text-rendering: optimiselegibility property as it was brekaing font display in Android. Fixes #4

--- a/templates/eggbox.css
+++ b/templates/eggbox.css
@@ -46,7 +46,6 @@
                 speak:none;
                 text-decoration:inherit;
                 text-transform:none;
-                text-rendering:optimizeLegibility;
                 -webkit-font-smoothing:antialiased;
                 -moz-osx-font-smoothing:grayscale;
             }
